--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ colors:
   blue:      '#49a7e9'
   green:     '#9bcf2f'
   purple:    '#c869bf'
-  orange:    '#fab125'
+  orange:    '#993c00'
   turquoise: '#0fbfcf'
 
 kramdown:
