--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "A single-page template for Jekyll based blogs (like what you'd use
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
+## google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
@@ -32,6 +32,7 @@ colors:
   purple:    '#c869bf'
   orange:    '#993c00'
   turquoise: '#0fbfcf'
+  lime:      '#00FF00'
 
 kramdown:
   auto_ids:  false
